WIP fetch source theirs

--- a/lib/ember-cli-package-merger/package.json
+++ b/lib/ember-cli-package-merger/package.json
@@ -2,5 +2,8 @@
   "name": "ember-cli-package-merger",
   "keywords": [
     "ember-addon"
-  ]
+  ],
+  "dependencies": {
+    "node-fetch": "^1.6.3"
+  }
 }
