--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "start": "ember server",
     "test": "ember test"
   },
+  "dependencies": {
+    "package-merger": "bantic/package-merger#master"
+  },  
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^2.4.1",
