--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "ember test"
   },
   "dependencies": {
-    "package-merger": "bantic/package-merger#master"
+     "three-way-merger": "^0.2.0"
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
